# did

./: .gitignore  CODE_STRUCTURE.md  README.md  docker-compose.pleroma.yml  mix.exs
alem-desktop/: package-lock.json  package.json
alem-desktop/src/: App.tsx
alem-desktop/src-tauri/: Cargo.toml  tauri.conf.json
alem-desktop/src-tauri/capabilities/: default.json
alem-desktop/src-tauri/src/: lib.rs  main.rs
alem-desktop/src-tauri/src/commands/: auth.rs  did.rs  documents.rs  files.rs  mod.rs  sync.rs
alem-desktop/src-tauri/src/db/: mod.rs  models.rs  schema.rs
alem-desktop/src-tauri/src/sync/: engine.rs
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js
client-rust/: Cargo.toml
client-rust/src/: lib.rs
client-rust/src/database/: libsql.rs  mod.rs
client-rust/src/storage/: file_manager.rs  mod.rs
client-rust/www/: index.html
config/: dev.exs  local_first.exs  prod.exs  runtime.exs  test.exs
lib/: alem.ex  alem_web.ex  pleroma_mock_server.ex
lib/alem/: application.ex  mailer.ex  repo.ex
lib/alem/identity/: did.ex  resolver.ex
lib/alem/local_first/: libsql_repo.ex  offline_queue.ex  sqld_schemas.ex  sync_manager.ex
lib/alem/namespace/: data_router.ex  manager.ex  namespace.ex  pleroma_integration.ex  registry.ex  supervisor.ex
lib/alem/schemas/: document.ex  local_document.ex  local_user.ex  namespace.ex  offline_operation.ex
lib/alem/storage/: document_store.ex  object_store.ex  relational_store.ex
lib/alem_web/: endpoint.ex  gettext.ex  router.ex  swagger.ex  telemetry.ex
lib/alem_web/components/: core_components.ex  layouts.ex
lib/alem_web/components/layouts/: root.html.heex
lib/alem_web/controllers/: auth_controller.ex  did_controller.ex  error_html.ex  error_json.ex  health_controller.ex  identity_controller.ex  local_first_controller.ex  namespace_controller.ex  namespace_pleroma_controller.ex  page_controller.ex  page_html.ex  pleroma_mock_controller.ex  sync_controller.ex
lib/alem_web/controllers/page_html/: home.html.heex
lib/alem_web/plugs/: pleroma_auth.ex
priv/lib_sql_repo/migrations/: 20260223092155_create_local_first_tables.exs
priv/local_data/: alem_local_dev.db
priv/local_first_migrations/: 20260223092155_create_local_first_tables.exs
priv/repo/: seeds.exs
priv/repo/migrations/: 20251231062914_create_documents.exs  20260107084900_create_namespaces.exs  20260107084902_add_tenant_id_to_documents.exs  20260216205242_add_did_to_namespaces.exs  20260223075947_create_offline_operations.exs  20260223080124_create_local_users.exs  20260223080302_create_local_documents.exs
scripts/: start_pleroma_mock.sh
test/: test_helper.exs
test/alem_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex  data_case.ex
