[package]
name = "alem-client"
version = "0.1.0"
edition = "2021"
description = "Local-first client for Alem document management system"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM and JS interop
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Storage",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Blob",
  "File",
  "FileReader",
  "IdbFactory",
  "IdbDatabase",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbRequest",
  "IdbCursor",
  "Navigator",
  "StorageManager",
] }

# Database
libsql = { version = "0.4", features = ["wasm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Async
futures = "0.3"

# Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Utilities
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"